# milkdawp

./: .gitignore  CMakeLists.txt  README.md
THIRD_PARTY_LICENSES/: projectM-LGPL-2.1.txt
cmake/: CopyFileIfExists.cmake
resources/presets/: README.md
src/processor/: PluginProcessor.cpp  PluginProcessor.h
src/renderers/: ProjectMRenderer.cpp  ProjectMRenderer.h
src/state/: Parameters.h
src/ui/: PluginEditor.cpp  PluginEditor.h  VisualizationWindow.cpp  VisualizationWindow.h
src/utils/: LockFreeAudioFifo.cpp  LockFreeAudioFifo.h  Logging.cpp  Logging.h
